# meeTINg

./: .gitignore  README.md  TODO
aartifaaviasd/: pom.xml
aartifaaviasd/src/main/java/: AppConfig.java  Main.java
aartifaaviasd/src/main/java/controller/: ExampleController.java
aartifaaviasd/src/main/java/service/: ExampleService.java
meeting-client-application/: pom.xml
meeting-client-application/etc/: EVENTS  GROUPS  LOGOWANIE  TERMINY  USER_REQUESTS
meeting-client-application/src/main/java/: Main.java
meeting-client-application/src/main/java/client/: Client.java
meeting-client-application/src/main/java/controller/: AllGroupsWindowController.java  AppointmentsWindowController.java  EventsWindowController.java  GroupsWindowController.java  LoginWindowController.java  RegistrationWindowController.java  UserRequestsWindowController.java
meeting-client-application/src/main/java/enums/: RequestFlag.java  ResponseFlag.java  (+1 more)
server-client-cpp/: clientmain.cpp  servermain.cpp
server-client-cpp/etc/: converter.cpp
server-client-cpp/server-prototype/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  ClientStructure.h  Comment.cpp  Comment.h  ConnectionManager.cpp  ConnectionManager.h  ConsoleManager.cpp  ConsoleManager.h  DataBaseConnection.cpp  DataBaseConnection.h  Event.cpp  Event.h  Group.cpp  Group.h  MessageParser.cpp  MessageParser.h  Offer.cpp  Offer.h  PackageSizeParser.cpp  PackageSizeParser.h  RequestFlag.h  ResponseFlag.h  ResposneFlag.h  ServerController.cpp  ServerController.h  User.cpp  User.h  Vote.cpp  Vote.h  Waiter.h  main.cpp
(+70 files in other folders)
